슬라이딩 패널, 위에서 슬라이드하면 창 올라옴 참고 : https://mechacat.tistory.com/18 PanelState 이용한 열기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:gravity="bottom"
-    app:umanoDragView="@id/slide_layout">
+    app:umanoPanelHeight="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/back_layout"
